--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A workshop for learning Redis",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "spellcheck": "mdspell 'labs/*.md' --en-gb -n --report",
     "pdf": "md-to-pdf ./labs/*.md && mkdir -p dist && mv ./labs/*.pdf ./dist"
   },
   "repository": {
@@ -16,6 +17,7 @@
   },
   "homepage": "https://github.com/liammoat/redis-workshop#readme",
   "devDependencies": {
-    "md-to-pdf": "^5.2.3"
+    "md-to-pdf": "^5.2.3",
+    "markdown-spellcheck": "^0.11.0"
   }
 }
